# MNN

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  BUILDSTATUS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  MNN.podspec  MNN.sln  MNN_Render.podspec  OpRegister.sh  README.md  README_CN.md  README_JP.md  README_TW.md  SECURITY.md  TESTING.md  TODO.md  build_cmd.md  build_lib.sh  docker_release.sh  docker_run.sh  log.txt  mac_package.sh  prepare_qnn_deps.sh  release.sh  test.bat  test.ipynb  test.ps1  test.py  test.sh  test1.txt  test2.txt  test_ci.sh  (+1 more)
apps/mnncli/: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.bak  README.md  android_build.sh  android_debug.sh  build.sh  build_integrated.sh  clean.sh  deploy_android.sh  direct_video_test.sh  model_market.json  openssl-android-config.cmake  quick_start.sh  quick_video_test.sh  test.sh  test_opencv_CMakeLists.txt  test_opencv_android.sh  test_video_fix.sh  todo.md
benchmark/: .gitignore  CMakeLists.txt  Readme_CN.md  bench_android.sh  benchmark.cpp  benchmark.h  benchmarkExprModels.cpp
benchmark/android/: bench_android.sh
benchmark/exprModels/: ExprModels.hpp  GoogLeNetExpr.cpp  GoogLeNetExpr.hpp  MobileNetExpr.cpp  MobileNetExpr.hpp  Readme_CN.md  ResNetExpr.cpp  ResNetExpr.hpp  ShuffleNetExpr.cpp  ShuffleNetExpr.hpp  SqueezeNetExpr.cpp  SqueezeNetExpr.hpp
benchmark/models/: MobileNetV2_224.mnn  SqueezeNetV1.0.mnn  inception-v3.mnn  mobilenet-v1-1.0.mnn  mobilenetV3.mnn  nasnet.mnn  resnet-v2-50.mnn  squeezenetv1.1.mnn  vgg16.mnn
benchmark/result/: 2019-2-18.md  2019-5-7.md  2019-6-17.md  2020-3-22.md
benchmark/scripts/: READMD.md  bench.sh  bench_pc.py  build.sh  convert.py  convert.sh
codegen/: CMakeLists.txt  OpFuse.cpp  OpFuse.hpp  PluginModule.hpp  SourceModule.cpp  SourceModule.hpp  build.sh
codegen/backend/: generate.py  requirements.txt
codegen/cpu/: AST.hpp  CPUAst.hpp  CPUPluginModule.cpp
codegen/cuda/: CUDATarget.cpp  CUDATarget.hpp
codegen/jit/: JitPluginWrapper.cpp  LLVMJit.cpp  LLVMJit.hpp
codegen/metal/: MetalTarget.cpp  MetalTarget.hpp
codegen/old_opencl/: OpenCLModule.cpp
codegen/opencl/: OpenCLPluginModule.cpp  OpenCLTarget.cpp  OpenCLTarget.hpp
codegen/plugin_wrapper/: PluginWrapper.cpp
codegen/qnn/: .gitignore  setup.sh
demo/exec/: CMakeLists.txt  PoseNames.hpp  README.md  expressDemo.cpp  expressMakeModel.cpp  multiPose.cpp  multithread_imgrecog.cpp  nluDemo.cpp  pictureRecognition.cpp  pictureRecognition_batch.cpp  pictureRecognition_module.cpp  pictureRotate.cpp  pictureTest.cpp  rasterDemo.cpp  segment.cpp  test.cpp  transformerDemo.cpp
express/: CMakeLists.txt  Executor.cpp  ExecutorScope.cpp  Expr.cpp  Initializer.cpp  MathOp.cpp  MergeOptimizer.cpp  MergeOptimizer.hpp  NeuralNetWorkOp.cpp  Optimizer.cpp  RandomGenerator.hpp  RuntimeAttr.hpp  Utils.cpp  Utils.hpp
express/include/: Expr.hpp  ExprCreator.hpp  MathOp.hpp  NeuralNetWorkOp.hpp  Optimizer.hpp
express/module/: FixModule.cpp  FixModule.hpp  IfModule.cpp  IfModule.hpp  MoEModule.cpp  MoEModule.hpp  Module.cpp  ModuleInside.hpp  NMSModule.cpp  NMSModule.hpp  NN.cpp  PipelineModule.cpp  PipelineModule.hpp  StaticModule.cpp  StaticModule.hpp  WhileModule.cpp  WhileModule.hpp
express/source/: Expr.cpp  InsideExpr.cpp  InsideExpr.hpp  MathOp.cpp  NeuralNetWorkOp.cpp  Optimizer.cpp  Solution.cpp  Solution.hpp  Utils.cpp  Utils.hpp
js/: .gitignore  CMakeLists.txt  README.md  README_LLM.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json  test_style_transfer.js
js/examples/: face_detection.js  image_classification.js  inference.js  qwen_inference.js  semantic_segmentation.js  style_transfer.js  yolo_detection.js
js/models/: minimal_model.mnn  mobilenet_v1_1.0_224.tflite  test_model.mnn
js/src/: common.h  interpreter.cc  interpreter.h  llm.cc  llm.h  mnn_node.cc  session.cc  session.h  tensor.cc  tensor.h  utils.cc  utils.h
js/test/: interpreter.test.js  llm.test.js  qwen_inference.js  tensor.test.js
pymnn/: CMakeLists.txt  INSTALL.md  rm_comments.py  update_mnn_wrapper_assets.sh
pymnn/pip_package/: README.md  README_FMA.md  README_Internal.md  build_deps.py  build_deps_fma.py  build_manylinux2010.sh  build_manylinux2014.sh  build_wheel.py  pyproject.toml  setup.py
pymnn/src/: MNN.cc  MNNPyBridge.h  MNNTools.cc  audio.h  common.h  compress.h  cv.h  data.h  expr.h  llm.h  loss.h  nn.h  optim.h  renameForAliNNPython.h  reranker.h  util.h
pymnn/test/: README.md  benchmark.py  model_test.py  train_test.sh  unit_test.py
rust/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  create_test_image.rs  download_model.sh  download_style_transfer_model.sh  progress.md
rust/csrc/: mnn_c.cpp  mnn_c.h
rust/examples/: api_demo.rs  image_classification.rs  llm_example.rs  qwen_demo.rs  qwen_inference.rs  qwen_vl_demo.rs  style_transfer.rs  vl_demo.rs  vl_image_test.rs
rust/src/: error.rs  ffi.rs  image_process.rs  interpreter.rs  lib.rs  llm.rs  tensor.rs
source/jni/: CMakeLists.txt  mnnnetnative.cpp  mnnportraitnative.cpp
test/: CMakeLists.txt  CommonOpCreator.hpp  MNNTestSuite.cpp  MNNTestSuite.h  TestUtils.cpp  TestUtils.h  TestUtils.mm  fused_add_rmsnorm_test.cpp  main.cpp
test/clone/: CloneNetTest.cpp
test/core/: AutoStorageTest.cpp  BackendTest.cpp  BufferAllocatorTest.cpp  CallBackTest.cpp  DirectedAcyclicGraphTest.cpp  FileUtilsTest.cpp  IDSTTest.cpp  MemoryUtilsTest.cpp  RegionFuse.cpp  ScheduleTest.cpp  SizeComputerTest.cpp  StateCacheManagerTest.cpp  TensorTest.cpp  TensorUtilsTest.cpp  ThreadPoolTest.cpp
test/cv/: ImageOpTest.cpp  ImageProcessTest.cpp  MatrixTest.cpp
test/expr/: AllAnyTest.cpp  CheckNAN.cpp  ConvInt8Test.cpp  ExecutorResetTest.cpp  ExecutorScopeMultiThreadTest.cpp  ExprResizeComputeTest.cpp  ExprResizeTest.cpp  ExtraTest.cpp  GatherTest.cpp  MMapTest.cpp  MatMulTest.cpp  MatrixBandTest.cpp  MemoryIncrease.cpp  ModuleShapeInfer.cpp  ModuleTest.cpp  MultiThreadLoad.cpp  PaddingTest.cpp  RasterOutputTest.cpp  ReplaceTest.cpp  (+4 more)
(+8747 files in other folders)
